@@ -75,7 +75,7 @@ def inventory_windows_services(info):
             if n not in [ state, start_type ]:
                 return []
 
-        return [(name, None)]
+        return [(name, {})]
 
     # Handle entries like ( [ "term" ], ALL_HOSTS, [ "FooBar auto", ".*TEST running" ] )
     def add_services_with_tags(name, state, start_type, entry):
@@ -92,11 +92,11 @@ def inventory_windows_services(info):
 
     inventory = []
     for line in info:
-        name = line[0]
-        if '/' in line[1]:
-            state, start_type = line[1].split('/')
+        name = line[1]
+        if '/' in line[2]:
+            state, start_type = line[2].split('/')
         else:
-            state = line[1]
+            state = line[2]
             start_type = "unknown"
 
         for entry in inventory_services:
@@ -110,33 +110,75 @@ def inventory_windows_services(info):
     return inventory
 
 
-def check_windows_services(item, _no_params, info):
-    # make sure, that thing also works for clusters:
-    # here a service can be listed more than once.
-    # It is sufficient of at least one "running" is
-    # found.
-    worststate = None
+# Format of parameters
+# {
+#    "states" : [ ( "running", "demand", 1 ),
+#                  ( "stopped", None, 2 ) ],
+#    "else" : 2,
+# }
+
+def check_windows_services(item, params, info):
+    # Hack for old manually defined checks:
+    if params == None:
+        params = factory_settings["services_default_levels"];
+
+    # A service may appear more than once (due to clusters).
+    # First make a list of all matching entries with their 
+    # states
+    found = []
     for line in info:
-        name = line[0]
-        if name == item:
+        if item == line[1]:
             # newer agents also send start type as part of state,
             # e.g. running/auto
-            if '/' in line[1]:
-                state, start_type = line[1].split('/')
+            if '/' in line[2]:
+                state, start_type = line[2].split('/')
             else:
-                state = line[1]
+                state = line[2]
                 start_type = "unknown"
+            found.append((line[0], state, start_type))
 
-            displayname = " ".join(line[2:])
-            if state == 'running':
-                return (0, "OK - running (start type is %s): %s" % (start_type, displayname))
-            worststate = state
-            worst_start_type = start_type
-    if worststate:
-        return (2, "CRIT - %s (start type is %s): %s" % (worststate, worst_start_type, displayname))
-    else:
+    if len(found) == 0:
         return (3, "UNKNOWN - service not found")
 
 
-check_info['services'] = (check_windows_services, "service_%s", 0, inventory_windows_services)
-checkgroup_of['services'] = 'services'
+    # We take the best found state (neccessary for clusters)
+    best_state = None
+    for running_on, state, start_type in found:
+        for t_state, t_start_type, mon_state in params["states"]:
+            if (t_state == None or t_state == state) \
+             and (t_start_type == None or t_start_type == start_type): 
+                this_state = mon_state 
+                break
+        else:
+            this_state = params["else"]
+
+        if best_state == None or this_state < best_state:
+            best_state = this_state
+            best_info = state, start_type
+            best_running_on = running_on
+
+    infotext = nagios_state_names[best_state] + " - %s (start type is %s)" % best_info
+    if best_running_on:
+        infotext += " (running on: %s)" % best_running_on
+
+    return (best_state, infotext)
+
+
+
+# check_info['services'] = (check_windows_services, "service_%s", 0, inventory_windows_services)
+# checkgroup_of['services'] = 'services'
+
+factory_settings["services_default_levels"] = { 
+    "states"      : [ ( "running", None, 0 ) ],
+    "else"        : 2,
+}
+
+check_info['services'] = {
+    "check_function"          : check_windows_services,
+    "inventory_function"      : inventory_windows_services,
+    "service_description"     : "service_%s",
+    "has_perfdata"            : False,
+    "node_info"               : True,
+    "group"                   : "services",
+    "default_levels_variable" : "services_default_levels",
+}
